--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,4 +1,25 @@
-email: 'support@ogdolo.com'
-phone: '(435) 632 0924'
-businessName: 'Ogdolo'
-address: 'American Fork, Utah'
+enable : true
+heading : Get In
+headingSpan : Touch
+title : Contact Details
+content : Email us to setup a free consultation
+enable_maps : true
+mapLatitude : 51.5223477
+mapLongitude : -0.1622023
+socialIcons :
+  - icon : tf-ion-social-facebook
+    url : "https://www.facebook.com/ogdolocom"
+
+  - icon : tf-ion-social-twitter
+    url : https://twitter.com/ogdolo_com
+
+  - icon : tf-ion-social-linkedin
+    url : https://www.linkedin.com/company/ogdolo
+
+contactDetails :
+  - icon : tf-map-pin
+    info : "American Fork, Utah"
+    
+  - icon : tf-ion-ios-email-outline
+    info : "Email: support@ogdolo.com"
+    
