--- a/data/social.yaml
+++ b/data/social.yaml
@@ -1,3 +1,3 @@
-twitter: "https://twitter.com/ogdolo"
+twitter: "https://twitter.com/https://twitter.com/ogdolo_com"
 linkedin: "https://www.linkedin.com/in/ogdolo/"
 facebook: "https://www.facebook.com/ogdolo/"
