spelling social and blank maps

--- a/data/about2.yml
+++ b/data/about2.yml
@@ -7,7 +7,7 @@ aboutItem :
     title : SEO Optimized
     content : We use lightning fast, and modern web practices to make sure google sees you
     
-  - icon : tf-twitter
+  - icon : tf-ion-social-twitter
     title : Link Social Accounts
     content : Build links between all of your social accounts to keep your audience engaged
 
