--- a/data/pricing.yml
+++ b/data/pricing.yml
@@ -8,7 +8,7 @@ pricingTable :
     btnURL : mailto:support@ogdolo.com
     btnText : Email Now
     plan :
-      - planDetails : Asses Current Situation
+      - planDetails : Assess Current Situation
       - planDetails : Explain Pricing and Options
       - planDetails : Personalized Help
       - planDetails : By Phone or Email
