--- a/data/about.yml
+++ b/data/about.yml
@@ -8,7 +8,7 @@ aboutItem :
 
 - icon : tf-strategy
   title : We're Professional
-  content : We are available to personally help you. If you have any special requirements or requests we will work with you to find a solution
+  content : We are available to personally help you, and are local to Lehi, Utah. If you have any special requirements or requests we will work with you to find a solution
 
 - icon : tf-anchor2
   title : We're Savvy
