--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ custom_css = ["css/custom.css"]
     bgImage = "images/slider/hero-area.jpg"
     icon = "images/logo.png"
     heading = "Experience Modern Web Hosting"
-    content= "Ogdolo provides mobile friendly, inexpensive, fully managed websites for small businesses. You focus on your business, we'll maintain your site"
+    content= "We provide mobile friendly, fully managed websites. You focus on your business, we'll maintain your site."
     btn = true
     btnText="EMAIL SUPPORT@OGDOLO.COM TO START"
     btnURL="mailto:support@ogdolo.com"
