--- a/data/about.yml
+++ b/data/about.yml
@@ -8,8 +8,8 @@ aboutItem :
 
 - icon : tf-strategy
   title : We're Professional
-  content : We are available to personally help you, and are local to Lehi, Utah. If you have any special requirements or requests we will work with you to find a solution
+  content : We are available to personally help you. If you have any special requirements or requests we will work with you to find a solution
 
 - icon : tf-anchor2
   title : We're Savvy
-  content : Our team has past experience in large web applications. We've brought that knowledge to small web hosting to create the most inexpensive hosting solutions
+  content : Our team has past experience in large web applications. We've brought that knowledge to small business website development to create the most efficient solutions
