--- a/data/service.yml
+++ b/data/service.yml
@@ -4,12 +4,12 @@ heading : What
 headingSpan : We Do
 serviceItem :
   - icon : tf-globe
-    title : Prebuilt Themes
-    content : Select from a collection of themes for your website. We ensure wonderful design by using tried and proven themes
+    title : Custom Themes
+    content : We ensure wonderful design by using tried and proven themes, and fine-tuning them to your brand
     
   - icon : tf-ion-laptop
     title : Mobile First
-    content : All our websites are built to perform perfectly on desktop and mobile devices. Mobile responsiveness is an absolute must
+    content : All of our websites are built to perform perfectly on desktop and mobile devices. Mobile responsiveness is an absolute must
     
   - icon : tf-dial
     title : Beautiful Design
